added responsiveness and reworked style.css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>GREENSHOP</title>
 </head>
 <body>
 <header>
-    <div class="container_header">
+    <div class="container">
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
         <nav>
             <ul class="links_nav_ul">
@@ -34,175 +35,182 @@
 </header>
 <main>
     <section class="first_section">
-        <div class="welcome_info">
-            <h2>
-                Welcome to greenshop
-            </h2>
-            <h1>
-                Let's Make a better <span class="planet_title">planet</span>
-            </h1>
-            <h2>
-                We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to
-                create unique Urban Jungle. Order your favorite plants!
-            </h2>
-            <a href="#">Shop now</a>
-        </div>
-        <div>
-            <img src="images/Flowers.png" alt="flowers">
+        <div class="container">
+            <div class="welcome_info">
+                <h2>
+                    Welcome to greenshop
+                </h2>
+                <h1>
+                    Let's Make a better <span class="planet_title">planet</span>
+                </h1>
+                <h2>
+                    We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to
+                    create unique Urban Jungle. Order your favorite plants!
+                </h2>
+                <a href="#">Shop now</a>
+            </div>
+            <div>
+                <img src="images/Flowers.png" alt="flowers">
+            </div>
         </div>
     </section>
     <section class="catalog">
-        <div class="catalog_first_block">
-            <div>
-                <h3>Categories</h3>
-                <ul>
-                    <li><a href="#">House Plants</a></li>
-                    <li><a href="#">Potter Plants</a></li>
-                    <li><a href="#">Seeds</a></li>
-                    <li><a href="#">Small Plants</a></li>
-                    <li><a href="#">Big Plants</a></li>
-                    <li><a href="#">Succulents</a></li>
-                    <li><a href="#">Terrariums</a></li>
-                    <li><a href="#">Gardening</a></li>
-                    <li><a href="#">Accessories</a></li>
-                </ul>
+        <div class="container">
+            <div class="catalog_first_block">
+                <div>
+                    <h3>Categories</h3>
+                    <ul>
+                        <li><a href="#">House Plants</a></li>
+                        <li><a href="#">Potter Plants</a></li>
+                        <li><a href="#">Seeds</a></li>
+                        <li><a href="#">Small Plants</a></li>
+                        <li><a href="#">Big Plants</a></li>
+                        <li><a href="#">Succulents</a></li>
+                        <li><a href="#">Terrariums</a></li>
+                        <li><a href="#">Gardening</a></li>
+                        <li><a href="#">Accessories</a></li>
+                    </ul>
+                </div>
+                <img src="images/banner_super_sale.png" alt="banner_super_sale">
             </div>
-            <img src="images/banner_super_sale.png" alt="banner_super_sale">
-        </div>
-        <div class="catalog_second_block">
-            <div class="catalog_second_block_head">
-                <ul>
-                    <li><a href="#">All Plants</a></li>
-                    <li><a href="#">New Arrivals</a></li>
-                    <li><a href="#">Sale</a></li>
-                </ul>
-                <p>Short by: Default sorting</p>
-            </div>
-            <div class="cards_of_items">
-                <article>
-                    <ul class="ul_buttons">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+            <div class="catalog_second_block">
+                <div class="catalog_second_block_head">
+                    <div>
+                        <ul>
+                            <li><a href="#">All Plants</a></li>
+                            <li><a href="#">New Arrivals</a></li>
+                            <li><a href="#">Sale</a></li>
+                        </ul>
+                    </div>
+                    <p>Short by: Default sorting</p>
+                </div>
+                <div class="cards_of_items">
+                    <article>
+                        <ul class="ul_buttons">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <a href="#">
+                            <div><img src="images/barberton_daisy.png" alt="barberton_daisy"></div>
+                            <p>Barberton Daisy</p>
+                            <p>$119.00</p>
+                        </a>
+                    </article>
+                    <article>
+                        <ul class="ul_buttons">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <a href="#">
+                            <div><img src="images/angel_wing_begonia.png" alt="angel_wing_begonia"></div>
+                            <p>Angel Wing Begonia</p>
+                            <p>$169.00</p>
+                        </a>
+                    </article>
+                    <article>
+                        <ul class="ul_buttons">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <a href="#">
+                            <span class="sale">13% OFF</span>
+                            <div><img src="images/african_violet.png" alt="african_violet"></div>
+                            <p>African Violet</p>
+                            <p>$199.00 <span class="sale_prise">$229.00</span></p>
+                        </a>
+                    </article>
+                    <article>
+                        <ul class="ul_buttons">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <a href="#">
+                            <div><img src="images/beach_spider_lily.png" alt="beach_spider_lily"
+                                      class="img_spider_lily">
+                            </div>
+                            <p>Beach Spider Lily</p>
+                            <p>$129.00</p>
+                        </a>
+                    </article>
+                    <article>
+                        <ul class="ul_buttons">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <a href="#">
+                            <div><img src="images/blushing_bromeliad.png" alt="blushing_bromeliad"></div>
+                            <p>Blushing Bromeliad</p>
+                            <p>$139.00</p>
+                        </a>
+                    </article>
+                    <article>
+                        <ul class="ul_buttons">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <a href="#">
+                            <div><img src="images/aluminum_plant.png" alt="aluminum_plant"></div>
+                            <p>Aluminum Plant</p>
+                            <p>$179.00</p>
+                        </a>
+                    </article>
+                    <article>
+                        <ul class="ul_buttons">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <a href="#">
+                            <div><img src="images/birds_nest_fern.png" alt="birds_nest_fern"></div>
+                            <p>Bird's Nest Fern</p>
+                            <p>$99.00</p>
+                        </a>
+                    </article>
+                    <article>
+                        <ul class="ul_buttons">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <a href="#">
+                            <div><img src="images/broadleaf_lady_palm.png" alt="broadleaf_lady_palm"></div>
+                            <p>Broadleaf Lady Palm</p>
+                            <p>$59.00</p>
+                        </a>
+                    </article>
+                    <article>
+                        <ul class="ul_buttons">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                        <a href="#">
+                            <div><img src="images/chinese_evergreen.png" alt="chinese_evergreen"></div>
+                            <p>Chinese Evergreen</p>
+                            <p>$39.00</p>
+                        </a>
+                    </article>
+                </div>
+                <div class="catalog_second_block_links">
+                    <ul>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
                         <li><a href="#"></a></li>
                     </ul>
-                    <a href="#">
-                        <div><img src="images/barberton_daisy.png" alt="barberton_daisy"></div>
-                        <p>Barberton Daisy</p>
-                        <p>$119.00</p>
-                    </a>
-                </article>
-                <article>
-                    <ul class="ul_buttons">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                    <a href="#">
-                        <div><img src="images/angel_wing_begonia.png" alt="angel_wing_begonia"></div>
-                        <p>Angel Wing Begonia</p>
-                        <p>$169.00</p>
-                    </a>
-                </article>
-                <article>
-                    <ul class="ul_buttons">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                    <a href="#">
-                        <span class="sale">13% OFF</span>
-                        <div><img src="images/african_violet.png" alt="african_violet"></div>
-                        <p>African Violet</p>
-                        <p>$199.00 <span class="sale_prise">$229.00</span></p>
-                    </a>
-                </article>
-                <article>
-                    <ul class="ul_buttons">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                    <a href="#">
-                        <div><img src="images/beach_spider_lily.png" alt="beach_spider_lily" class="img_spider_lily">
-                        </div>
-                        <p>Beach Spider Lily</p>
-                        <p>$129.00</p>
-                    </a>
-                </article>
-                <article>
-                    <ul class="ul_buttons">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                    <a href="#">
-                        <div><img src="images/blushing_bromeliad.png" alt="blushing_bromeliad"></div>
-                        <p>Blushing Bromeliad</p>
-                        <p>$139.00</p>
-                    </a>
-                </article>
-                <article>
-                    <ul class="ul_buttons">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                    <a href="#">
-                        <div><img src="images/aluminum_plant.png" alt="aluminum_plant"></div>
-                        <p>Aluminum Plant</p>
-                        <p>$179.00</p>
-                    </a>
-                </article>
-                <article>
-                    <ul class="ul_buttons">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                    <a href="#">
-                        <div><img src="images/birds_nest_fern.png" alt="birds_nest_fern"></div>
-                        <p>Bird's Nest Fern</p>
-                        <p>$99.00</p>
-                    </a>
-                </article>
-                <article>
-                    <ul class="ul_buttons">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                    <a href="#">
-                        <div><img src="images/broadleaf_lady_palm.png" alt="broadleaf_lady_palm"></div>
-                        <p>Broadleaf Lady Palm</p>
-                        <p>$59.00</p>
-                    </a>
-                </article>
-                <article>
-                    <ul class="ul_buttons">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                    <a href="#">
-                        <div><img src="images/chinese_evergreen.png" alt="chinese_evergreen"></div>
-                        <p>Chinese Evergreen</p>
-                        <p>$39.00</p>
-                    </a>
-                </article>
-            </div>
-            <div class="catalog_second_block_links">
-                <ul>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#"></a></li>
-                </ul>
+                </div>
             </div>
         </div>
     </section>
     <section class="summer_collection">
-        <div class="container_summer_collection_section">
+        <div class="container">
             <article>
                 <img src="images/image_14.png" alt="flower">
                 <div>
@@ -224,7 +232,7 @@
         </div>
     </section>
     <section class="blog">
-        <div class="container_blog_section">
+        <div class="container">
             <h2>Our Blog Posts</h2>
             <p class="text_our_blog_posts">We are an online plant shop offering a wide range of cheap and trendy
                 plants. </p>
@@ -272,9 +280,8 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="container_pre_footer">
-            <div class="info_part_container_pre_footer">
+    <section class="pre_footer">
+        <div class="container">
                 <article>
                     <img src="images/garden_care.png" alt="garden_care" class="pre_footer_img">
                     <h3>Garden Care</h3>
@@ -301,11 +308,10 @@
                         offer a wide range of houseplants and accessories shipped directly from our (green)house to
                         yours! </p>
                 </div>
-            </div>
         </div>
     </section>
-    <section>
-        <div class="contacts_part_container_pre_footer">
+    <section class="contacts_part_pre_footer">
+        <div class="container">
             <a href="#"><img src="images/logo.svg" alt="logo"></a>
             <p class="pre_footer_address">70 West Buckingham Ave. Farmingdale, NY 11735</p>
             <a href="mailto:contact@greenshop.com" class="pre_footer_email">contact@greenshop.com</a>
@@ -314,7 +320,7 @@
     </section>
 </main>
 <footer>
-    <div class="footer_container">
+    <div class="container">
         <div class="footer_my_account">
             <h3>My Account</h3>
             <ul>
