--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
+    <script src="js/scripts.js"></script>
     <title>GREENSHOP</title>
 </head>
 <body>
@@ -49,7 +50,7 @@
                 </h2>
                 <a href="#">Shop now</a>
             </div>
-            <div>
+            <div class="main_picture">
                 <img src="images/Flowers.png" alt="flowers">
             </div>
         </div>
@@ -57,6 +58,7 @@
     <section class="catalog">
         <div class="container">
             <div class="catalog_first_block">
+                <a href="#" class="menu_bar"><img src="images/bar.svg" alt="bar"></a>
                 <div>
                     <h3>Categories</h3>
                     <ul>
@@ -282,32 +284,32 @@
     </section>
     <section class="pre_footer">
         <div class="container">
-                <article>
-                    <img src="images/garden_care.png" alt="garden_care" class="pre_footer_img">
-                    <h3>Garden Care</h3>
-                    <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
-                </article>
-                <article>
-                    <img src="images/plant_renovation.png" alt="plant_renovation" class="pre_footer_img">
-                    <h3>Plant Renovation</h3>
-                    <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
-                </article>
-                <article>
-                    <img src="images/watering_garden.png" alt="watering_garden" class="pre_footer_img">
-                    <h3>Watering Garden</h3>
-                    <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
-                </article>
-                <div>
-                    <h3>Would you like to join newsletters?</h3>
-                    <form name="newsletters_subscription" method="post" action="">
-                        <input name="email_subscription" id="email_subscription" type="email"
-                               placeholder="enter your email address...">
-                        <button type="submit">Join</button>
-                    </form>
-                    <p>We usually post offers and challenges in newsletter. We’re your online houseplant destination. We
-                        offer a wide range of houseplants and accessories shipped directly from our (green)house to
-                        yours! </p>
-                </div>
+            <article>
+                <img src="images/garden_care.png" alt="garden_care" class="pre_footer_img">
+                <h3>Garden Care</h3>
+                <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+            </article>
+            <article>
+                <img src="images/plant_renovation.png" alt="plant_renovation" class="pre_footer_img">
+                <h3>Plant Renovation</h3>
+                <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+            </article>
+            <article>
+                <img src="images/watering_garden.png" alt="watering_garden" class="pre_footer_img">
+                <h3>Watering Garden</h3>
+                <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+            </article>
+            <div>
+                <h3>Would you like to join newsletters?</h3>
+                <form name="newsletters_subscription" method="post" action="">
+                    <input name="email_subscription" id="email_subscription" type="email"
+                           placeholder="enter your email address...">
+                    <button type="submit">Join</button>
+                </form>
+                <p>We usually post offers and challenges in newsletter. We’re your online houseplant destination. We
+                    offer a wide range of houseplants and accessories shipped directly from our (green)house to
+                    yours! </p>
+            </div>
         </div>
     </section>
     <section class="contacts_part_pre_footer">
