reworked registration.html

--- a/registration.html
+++ b/registration.html
@@ -23,7 +23,10 @@
             <p class="text_reg">Enter your email and password to register.</p>
             <input name="user_name" type="text" placeholder="Username" id="user_name">
             <input name="email" type="email" placeholder="Enter your email address" id="email">
-            <input name="password" type="password" placeholder="Password" id="password">
+            <div>
+                <input name="password" type="password" placeholder="Password" id="password">
+                <a href="#"><img src="images/Hide.svg" alt="hide"></a>
+            </div>
             <input name="confirmPassword" type="password" placeholder="Confirm Password" id="confirmPassword">
         </div>
         <button type="submit" class="button_reg">Register</button>
