--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-    <script src="js/scripts.js"></script>
     <title>GREENSHOP</title>
 </head>
 <body>
+    <div class="loader"></div>
 <header>
     <div class="container">
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
