added small changes to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>GREENSHOP</title>
 </head>
 <body>
-    <div class="loader"></div>
+<div class="loader"></div>
 <header>
     <div class="container">
         <a href="#"><img src="images/logo.svg" alt="logo"></a>
@@ -367,11 +367,11 @@
             <div class="footer_social">
                 <h3>Social Media</h3>
                 <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="#" title="facebook" target="_blank"></a></li>
+                    <li><a href="#" title="instagram" target="_blank"></a></li>
+                    <li><a href="#" title="twitter" target="_blank"></a></li>
+                    <li><a href="#" title="linkedin" target="_blank"></a></li>
+                    <li><a href="#" title="youtube" target="_blank"></a></li>
                 </ul>
             </div>
             <div class="footer_payment">
