--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <title>GREENSHOP</title>
@@ -248,7 +250,7 @@
             <h2>Our Blog Posts</h2>
             <p class="text_our_blog_posts">We are an online plant shop offering a wide range of cheap and trendy
                 plants. </p>
-            <div class="articles_blog_section">
+            <div class="articles_blog_section owl-carousel">
                 <article>
                     <img src="images/01.jpg" alt="flower">
                     <div>
@@ -382,5 +384,9 @@
     </div>
     <p class="rights_reserved">© 2021 GreenShop. All Rights Reserved.</p>
 </footer>
+<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+        crossorigin="anonymous"></script>
+<script src="scripts/owl.carousel.js"></script>
+<script src="scripts/scripts.js"></script>
 </body>
 </html>
