added more adaptive resolutions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="loader"></div>
 <header>
     <div class="container">
-        <a href="#"><img src="images/logo.svg" alt="logo"></a>
+        <a href="#" class="nav_logo"><img src="images/logo.svg" alt="logo"></a>
         <nav>
             <ul class="links_nav_ul">
                 <li><a href="#" class="links_nav_a">Home</a></li>
@@ -43,7 +43,7 @@
                 <li><a href="#" class="links_nav_a">Blogs</a></li>
             </ul>
         </nav>
-        <a href="registration.html" class="login_link_index">Login</a>
+        <a href="registration.html" class="login_link_index"><span class="login_link_index_text">Login</span></a>
     </div>
 </header>
 <main>
@@ -70,7 +70,6 @@
     <section class="catalog">
         <div class="container">
             <div class="catalog_first_block">
-                <a href="#" class="menu_bar"><img src="images/bar.svg" alt="bar"></a>
                 <div>
                     <h3>Categories</h3>
                     <ul>
