--- a/index.html
+++ b/index.html
@@ -17,44 +17,37 @@
 </head>
 <body>
 <div class="loader"></div>
-<!--<header>-->
-<!--    <div class="container">-->
-<!--        <a href="#" class="nav_logo"><img src="images/logo.svg" alt="logo"></a>-->
-<!--        <nav>-->
-<!--            <ul class="links_nav_ul">-->
-<!--                <li><a href="#" class="links_nav_a">Home</a></li>-->
-<!--                <li><a href="#" class="links_nav_a">Shop</a></li>-->
-<!--                <li class="parental_li_drop_down">-->
-<!--                    <a href="#" class="links_nav_a">Plant Care</a>-->
-<!--                    <ul class="drop_down_ul_first">-->
-<!--                        <li><a href="#">Drainage</a></li>-->
-<!--                        <li><a href="#">Fungicides</a></li>-->
-<!--                        <li><a href="#">Fertilizer</a></li>-->
-<!--                        <li class="parental_li_drop_down_second">-->
-<!--                            <a href="#">Priming</a>-->
-<!--                            <ul class="drop_down_ul_second">-->
-<!--                                <li><a href="#">Universal</a></li>-->
-<!--                                <li><a href="#">For Ficus</a></li>-->
-<!--                                <li><a href="#">For Cacti</a></li>-->
-<!--                                <li><a href="#">For Citrus</a></li>-->
-<!--                                <li><a href="#">For those in bloom</a></li>-->
-<!--                                <li><a href="#">For Orchids</a></li>-->
-<!--                            </ul>-->
-<!--                        </li>-->
-<!--                    </ul>-->
-<!--                </li>-->
-<!--                <li><a href="#" class="links_nav_a">Blogs</a></li>-->
-<!--            </ul>-->
-<!--        </nav>-->
-<!--        <a href="registration.html" class="login_link_index"><span class="login_link_index_text">Login</span></a>-->
-<!--    </div>-->
-<!--</header>-->
-
 <header class="cd-header">
-    <div class="header-wrapper">
-        <div class="logo-wrap">
-            <a href="#" class="hover-target"><span>your</span>logo</a>
-        </div>
+    <div class="container header-wrapper">
+        <a href="#" class="nav_logo"><img src="images/logo.svg" alt="logo"></a>
+        <nav class="nav">
+            <div class="nav__content">
+                <ul class="links_nav_ul nav__list">
+                    <li class="nav__list-item active-nav"><a href="#" class="links_nav_a hover-target">Home</a></li>
+                    <li class="nav__list-item"><a href="#" class="links_nav_a hover-target">Shop</a></li>
+                    <li class="parental_li_drop_down nav__list-item">
+                        <a href="#" class="links_nav_a hover-target">Plant Care</a>
+<!--                        <ul class="drop_down_ul_first">-->
+<!--                            <li><a href="#">Drainage</a></li>-->
+<!--                            <li><a href="#">Fungicides</a></li>-->
+<!--                            <li><a href="#">Fertilizer</a></li>-->
+<!--                            <li class="parental_li_drop_down_second">-->
+<!--                                <a href="#">Priming</a>-->
+<!--                                <ul class="drop_down_ul_second">-->
+<!--                                    <li><a href="#">Universal</a></li>-->
+<!--                                    <li><a href="#">For Ficus</a></li>-->
+<!--                                    <li><a href="#">For Cacti</a></li>-->
+<!--                                    <li><a href="#">For Citrus</a></li>-->
+<!--                                    <li><a href="#">For those in bloom</a></li>-->
+<!--                                    <li><a href="#">For Orchids</a></li>-->
+<!--                                </ul>-->
+<!--                            </li>-->
+<!--                        </ul>-->
+                    </li>
+                    <li><a href="#" class="links_nav_a nav__list-item">Blogs</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="nav-but-wrap">
             <div class="menu-icon hover-target">
                 <span class="menu-icon__line menu-icon__line-left"></span>
@@ -62,18 +55,9 @@
                 <span class="menu-icon__line menu-icon__line-right"></span>
             </div>
         </div>
+        <a href="registration.html" class="login_link_index"><span class="login_link_index_text">Login</span></a>
     </div>
 </header>
-<div class="nav">
-    <div class="nav__content">
-        <ul class="nav__list">
-            <li class="nav__list-item active-nav"><a href="#" class="hover-target">home</a></li>
-            <li class="nav__list-item"><a href="#" class="hover-target">studio</a></li>
-            <li class="nav__list-item"><a href="#" class="hover-target">news</a></li>
-            <li class="nav__list-item"><a href="#" class="hover-target">contact</a></li>
-        </ul>
-    </div>
-</div>
 
 <main>
     <section class="first_section">
