reworked mobile menu

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
 
-    <link rel="stylesheet" href="css/mob_menu.css">
+
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mob_menu.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
@@ -27,22 +28,22 @@
                     <li class="nav__list-item"><a href="#" class="links_nav_a hover-target">Shop</a></li>
                     <li class="parental_li_drop_down nav__list-item">
                         <a href="#" class="links_nav_a hover-target">Plant Care</a>
-<!--                        <ul class="drop_down_ul_first">-->
-<!--                            <li><a href="#">Drainage</a></li>-->
-<!--                            <li><a href="#">Fungicides</a></li>-->
-<!--                            <li><a href="#">Fertilizer</a></li>-->
-<!--                            <li class="parental_li_drop_down_second">-->
-<!--                                <a href="#">Priming</a>-->
-<!--                                <ul class="drop_down_ul_second">-->
-<!--                                    <li><a href="#">Universal</a></li>-->
-<!--                                    <li><a href="#">For Ficus</a></li>-->
-<!--                                    <li><a href="#">For Cacti</a></li>-->
-<!--                                    <li><a href="#">For Citrus</a></li>-->
-<!--                                    <li><a href="#">For those in bloom</a></li>-->
-<!--                                    <li><a href="#">For Orchids</a></li>-->
-<!--                                </ul>-->
-<!--                            </li>-->
-<!--                        </ul>-->
+                        <ul class="drop_down_ul_first">
+                            <li><a href="#">Drainage</a></li>
+                            <li><a href="#">Fungicides</a></li>
+                            <li><a href="#">Fertilizer</a></li>
+                            <li class="parental_li_drop_down_second">
+                                <a href="#">Priming</a>
+                                <ul class="drop_down_ul_second">
+                                    <li><a href="#">Universal</a></li>
+                                    <li><a href="#">For Ficus</a></li>
+                                    <li><a href="#">For Cacti</a></li>
+                                    <li><a href="#">For Citrus</a></li>
+                                    <li><a href="#">For those in bloom</a></li>
+                                    <li><a href="#">For Orchids</a></li>
+                                </ul>
+                            </li>
+                        </ul>
                     </li>
                     <li><a href="#" class="links_nav_a nav__list-item">Blogs</a></li>
                 </ul>
